force-app/main/default/objects/Account/fields/AI_Sales_Companion_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AI_Sales_Companion_Recommendation__c</fullName>
    <description>Stand-in for P&amp;G AI Sales Companion output. Contains next-best-action recommendation text consumed by the pre-call brief agent action. Source can be swapped to an external callout or Einstein Discovery output without changing the agent.</description>
    <label>AI Sales Companion Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>