force-app/main/default/objects/Account/fields/Competitor_Brands_Seen__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Brands_Seen__c</fullName>
    <description>Competitor brands observed dispensing at this practice. Used to flag competitive situations in the pre-call brief.</description>
    <label>Competitor Brands Seen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Sonicare</fullName><default>false</default><label>Sonicare</label></value>
            <value><fullName>Colgate</fullName><default>false</default><label>Colgate</label></value>
            <value><fullName>Sensodyne</fullName><default>false</default><label>Sensodyne</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>