force-app/main/default/objects/Account/fields/Dispenses_Manual__c.field-meta.xml
<CustomField>
    <fullName>Dispenses_Manual__c</fullName>
    <description>Does this practice dispense Oral-B Manual brushes to patients?</description>
    <defaultValue>false</defaultValue>
    <label>Dispenses Manual</label>
    <type>Checkbox</type>
</CustomField>