force-app/main/default/objects/Account/fields/Dispenses_Power__c.field-meta.xml
<CustomField>
    <fullName>Dispenses_Power__c</fullName>
    <description>Does this practice dispense Oral-B Power brushes to patients?</description>
    <defaultValue>false</defaultValue>
    <label>Dispenses Power</label>
    <type>Checkbox</type>
</CustomField>