force-app/main/default/objects/Account/fields/Last_iO_Sample_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_iO_Sample_Date__c</fullName>
    <description>Date the last Oral-B iO white box sample was dropped at this practice. Drives the sampling recency calculation in the pre-call brief.</description>
    <label>Last iO Sample Date</label>
    <type>Date</type>
</CustomField>