force-app/main/default/objects/Account/fields/Number_of_DDS__c.field-meta.xml
<CustomField>
    <fullName>Number_of_DDS__c</fullName>
    <description>Number of dentists (DDS/DMD) at this practice.</description>
    <label>Number of DDS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>