force-app/main/default/objects/Account/fields/Number_of_RDH__c.field-meta.xml
<CustomField>
    <fullName>Number_of_RDH__c</fullName>
    <description>Number of registered dental hygienists at this practice.</description>
    <label>Number of RDH</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>