force-app/main/default/objects/Account/fields/Practice_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Practice_Specialty__c</fullName>
    <description>Dental practice specialty type.</description>
    <label>Practice Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Pediatric</fullName>
            </value>
            <value>
                <fullName>Orthodontic</fullName>
            </value>
            <value>
                <fullName>Endodontic</fullName>
            </value>
            <value>
                <fullName>Periodontal</fullName>
            </value>
            <value>
                <fullName>Multi-Specialty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>