force-app/main/default/objects/Account/fields/Recommends_Manual__c.field-meta.xml
<CustomField>
    <fullName>Recommends_Manual__c</fullName>
    <description>Does this practice recommend Oral-B Manual brushes to patients?</description>
    <defaultValue>false</defaultValue>
    <label>Recommends Manual</label>
    <type>Checkbox</type>
</CustomField>