force-app/main/default/objects/Account/fields/Recommends_Power__c.field-meta.xml
<CustomField>
    <fullName>Recommends_Power__c</fullName>
    <description>Does this practice recommend Oral-B Power brushes to patients?</description>
    <defaultValue>false</defaultValue>
    <label>Recommends Power</label>
    <type>Checkbox</type>
</CustomField>